--- a/src/style.css
+++ b/src/style.css
@@ -16,4 +16,17 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+    position: fixed;
+}
+
+header{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+}
+
+.logo-container img{
+    width: 200px;
+    padding-left: 30px;
 }
