--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
-    position: fixed;
+    /* position: fixed; */
 }
 
 header{
@@ -30,3 +30,69 @@ header{
     width: 200px;
     padding-left: 30px;
 }
+
+main{
+    position: fixed;
+}
+
+.input{
+    background-color: var(--input-color);
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 300px;
+    margin-bottom: 20px;
+    padding: 0px 20px;
+    border-radius: 50px;
+    font-size: var(--font-size2);
+}
+
+::placeholder{
+    color: var(--font-color);
+}
+
+.button {
+    background-color: var(--button-color);
+    width: 200px;
+    height: 50px;
+    border: 0;
+    font-size: var(--font-size3);
+    font-weight: bold;
+    color: var(--font-color);
+    border-radius: 50px;
+    outline: none;
+}
+
+.button:hover{
+    background-color: var(--input-color);
+    cursor: pointer;
+}
+
+
+footer {
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    bottom: 0;
+    justify-content: space-between;
+  }
+  
+  .barra-inferior {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .barra-inferior a {
+    text-decoration: none;
+    color: var(--font-color);
+    margin: 30px;
+    font-size: var (var(--font-size1));
+    padding: 16px 16px;
+    bottom: 0;
+  }
+  
+  .icono-social img {
+    margin: 30px;
+    width: 30px;
+    height: 30px;
+  }
