--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@ main{
 }
 
 .button:hover{
+    box-shadow: 0 0 5px 0 var(--form-color);
     background-color: var(--background-color);
     cursor: pointer;
 }
