--- a/src/style.css
+++ b/src/style.css
@@ -12,10 +12,14 @@
 }
 
 body{
-    /* background-color: var(--background-color); */
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+}
+
+h3{
+    font-size: var(--font-size3);
+    color: var(--form-color);
 }
 
 header{
@@ -74,12 +78,33 @@ main{
     cursor: pointer;
 }
 
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+  
+.validator-form-container {
+    color: var(--font-color);
+    width: 500px;
+    padding: 0 50px 20px 50px;
+    background-color: var(--form-color);
+    border-radius: 50px;
+}
+
+.inputs-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .input{
     background-color: var(--input-color);
     border: none;
     outline: none;
     height: 50px;
-    width: 300px;
+    width: 450px;
     margin-bottom: 20px;
     padding: 0px 20px;
     border-radius: 50px;
@@ -87,6 +112,7 @@ main{
 }
 
 ::placeholder{
+    font-size: var(--font-size2);
     color: var(--font-color);
 }
 
