--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ body{
 }
 
 h3{
+    margin-top: 30px;
     font-size: var(--font-size3);
     color: var(--form-color);
 }
@@ -80,9 +81,11 @@ main{
 
 
 .form-container {
+    height: 650px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
   
 .validator-form-container {
