--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ header{
     height: 100px;
     display: flex;
     align-items: center;
+    box-shadow: 0 1px 10px 0 #00000012;
 }
 
 .logo-container img{
@@ -44,7 +45,6 @@ main{
     margin: 0 250px;
     height: 550px;
     display: flex;
-    justify-content: center;
     justify-content: space-around;
     align-items: center;
 }
@@ -132,48 +132,77 @@ main{
 }
 
 .button:hover{
-    box-shadow: 0 0 5px 0 var(--form-color);
+    box-shadow: 0 0 5px 0 rgb(25, 54, 121);
     background-color: var(--background-color);
     cursor: pointer;
 }
 
+.notfound-view{
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.notfound-view-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.notfound-view-container img{
+    width: 60%;
+}
+
+.valid-container {
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.valid-img-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.valid-img-container img{
+    width: 60%;
+}
 
 footer {
     width: 100%;
-    height: 80px;
+    height: 100px;
     position: fixed;
     bottom: 0;
-    justify-content: space-between;
+    box-shadow: 0 -1px 10px 0 #00000012;
 }
 
-.bottom-bar {
+.lower-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.contact{
-    margin-left: 30px;
-    width: 20%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.contact a {
-    text-decoration: none;
-    font-size: var (var(--font-size1));
+.lower-bar a {
     color: var(--form-color);
-    bottom: 0;
-}
-
-.contact a:hover {
-    color: var(--button-color);
+    font-size: var(--font-size2);
+    text-decoration: none;
+    margin: 30px;
+    padding: 16px 16px;
 }
 
 .socialmedia-icons img {
-    margin: 20px;
+    margin: 30px;
     width: 30px;
     height: 30px;
+}
+
+.lower-bar a:hover {
+    color: var(--button-color);
 }
 
 .socialmedia-icons img:hover {
