--- a/src/style.css
+++ b/src/style.css
@@ -1,84 +1,112 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap");
 
-:root{
-    --background-color: #CBC13B;
-    --font-color: #F2F4F8;
-    --input-color: #698DE1;
-    --form-color: #3165DC;
-    --button-color: #D96048;
-    --font-size1: 12px;
-    --font-size2: 15px;
-    --font-size3: 23px
+:root {
+  --background-color: #cbc13b;
+  --font-color: #f2f4f8;
+  --input-color: #698de1;
+  --form-color: #3165dc;
+  --button-color: #d96048;
+  --font-size1: 12px;
+  --font-size2: 15px;
+  --font-size3: 23px;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    font-family: 'Lato', sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+  background-color: rgb(238, 238, 238);
 }
 
-h3{
-    margin-top: 30px;
+h1{
+    margin-top: 50px;
     font-size: var(--font-size3);
     color: var(--form-color);
+} 
+
+header {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 1px 10px 0 #00000012;
 }
 
-header{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 1px 10px 0 #00000012;
+header:hover{
+  cursor: pointer;
 }
 
-.logo-container img{
-    width: 200px;
-    padding-left: 30px;
+.logo-container img {
+  width: 200px;
+  padding-left: 30px;
 }
 
-main{
-    width: 100%;
-    position: fixed;
+main {
+  position: fixed;
+  width: 100%;
 }
 
-.first-page{
+
+.first-page {
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.option-container{
     margin: 0 250px;
-    height: 550px;
+    width: 70%;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+.user-selection-container {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-.user-login{
-    width: 400px;
+.user-selection-container img {
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+.buttonSelect {
+  background-color: var(--button-color);
+  width: 400px;
+  height: 50px;
+  border: 0;
+  font-size: var(--font-size3);
+  font-weight: bold;
+  color: var(--font-color);
+  border-radius: 50px;
+  outline: none;
+}
+
+.buttonSelect:hover {
+  box-shadow: 0 0 5px 0 var(--form-color);
+  background-color: var(--background-color);
+  cursor: pointer;
+}
+
+/* .information-box{
+    margin-top: 50px;
+    width: 970px;
+    height: 60px;
+    background-color: var(--input-color);
+    border-radius: 10px;
     display: flex;
-    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.information-box h1{
+    display: flex;
     align-items: center;
-}
-
-.user-login img{
-    width: 300px;
-    margin-bottom: 20px;
-}
-
-.buttonSelect{
-    background-color: var(--button-color);
-    width: 400px;
-    height: 50px;
-    border: 0;
-    font-size: var(--font-size3);
-    font-weight: bold;
-    color: var(--font-color);
-    border-radius: 50px;
-    outline: none;
-}
-
-.buttonSelect:hover{
-    box-shadow: 0 0 5px 0 var(--form-color);
-    background-color: var(--background-color);
-    cursor: pointer;
-}
-
+    justify-content: center;
+} */
 
 .form-container {
     height: 650px;
@@ -90,10 +118,11 @@ main{
   
 .validator-form-container {
     color: var(--font-color);
+    font-size: var(--font-size3);
     width: 500px;
     padding: 0 50px 20px 50px;
     background-color: var(--form-color);
-    border-radius: 50px;
+    border-radius: 20px;
 }
 
 .inputs-container{
@@ -115,7 +144,7 @@ main{
 }
 
 ::placeholder{
-    font-size: var(--font-size2);
+    font-size: 18px;
     color: var(--font-color);
 }
 
@@ -137,80 +166,95 @@ main{
     cursor: pointer;
 }
 
-.notfound-view{
-    height: 650px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+.homeButton {
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.notfound-view-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.not-found-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: var(--font-size3);
 }
 
-.notfound-view-container img{
-    width: 60%;
+.not-found-page img{
+  width: 60%;
 }
 
 .valid-container {
-    height: 650px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .valid-img-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.valid-img-container img{
-    width: 60%;
+.valid-img-container img {
+  width: 60%;
 }
 
 footer {
-    width: 100%;
-    height: 100px;
-    position: fixed;
-    bottom: 0;
-    box-shadow: 0 -1px 10px 0 #00000012;
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  bottom: 0;
+  box-shadow: 0 -1px 10px 0 #00000012;
 }
 
 .lower-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .lower-bar a {
-    color: var(--form-color);
-    font-size: var(--font-size2);
-    text-decoration: none;
-    margin: 30px;
-    padding: 16px 16px;
+  color: var(--form-color);
+  font-size: var(--font-size2);
+  text-decoration: none;
+  margin: 30px;
+  padding: 16px 16px;
 }
 
-.socialmedia-icons img {
-    margin: 30px;
-    width: 30px;
-    height: 30px;
+.lower-bar a:hover{
+  color: var(--button-color);
 }
 
-.lower-bar a:hover {
-    color: var(--button-color);
+.social-icons-container img {
+  margin: 30px;
+  width: 30px;
+  height: 30px;
 }
 
-.socialmedia-icons img:hover {
-    cursor: pointer;
+.social-icons-container img:hover{
+  cursor: pointer;
 }
 
-@media screen and (max-width: 1024px){
+
+@media screen and (max-width: 1200px){
     body{
         background-color: red;
+    }
+}
+
+@media screen and (max-width: 768px){
+    body{
+        background-color: rgb(0, 153, 255);
+    }
+}
+
+@media screen and (max-width: 400px){
+    body{
+        background-color: rgb(214, 202, 25);
     }
 }
