--- a/src/style.css
+++ b/src/style.css
@@ -241,20 +241,66 @@ footer {
 }
 
 
-@media screen and (max-width: 1200px){
+/* @media screen and (max-width: 1200px){
     body{
         background-color: red;
     }
-}
+} */
 
 @media screen and (max-width: 768px){
-    body{
-        background-color: rgb(0, 153, 255);
-    }
-}
+  .option-container{
+    display: flex;
+    flex-direction: column;
+  }
+  .user-selection-container img{
+    width: 35%;
+  }
+  .buttonSelect{
+    font-size: 15px;
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  .information-box h1{
+    margin-top: 20px;
+    font-size: 18px;
+    text-align: center;
+  }
+  .validator-form-container {
+    width: 70%;
+  }
+  .input{
+    width: 100%;
+  }
+  footer{
+    height: 120px;
+  }
+  .homeButton{
+    margin-top: -45px;
+  }
+  .lower-bar{
+    display: block;
+    text-align: center;
+    padding-top: 15px;
+  }
+} 
 
-@media screen and (max-width: 400px){
-    body{
-        background-color: rgb(214, 202, 25);
-    }
+@media screen and (max-width: 480px){
+  .information-box h1{
+    padding: 0 10px;
+    font-size: 15px;
+    text-align: center;
+  }
+  footer{
+    height: 150px;
+  }
+  .lower-bar{
+    display: block;
+    text-align: center;
+    padding-top: 15px;
+  }
+  .lower-bar a{
+    display: block;
+    margin: 0;
+    padding: 5px;
+  }
 }
