--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ header:hover{
 }
 
 main {
-  position: fixed; 
+  /* position: fixed;  */
   width: 100%;
 }
 
@@ -183,7 +183,7 @@ main {
 }
 
 .not-found-page img{
-  width: 60%;
+  width: 50%;
 }
 
 .valid-container {
@@ -242,82 +242,126 @@ footer {
 
 
 @media screen and (max-width: 1200px){
-  .homeButton{
+  .homeButton {
     height: 700px;
   }
-  .not-found-page{
-    width: 600px;
+  .not-found-page {
+    width: 100%;
   }
-  .lower-bar a{
+  .lower-bar a {
     margin: 0 0 0 30px;
   }
 }
 
 
 @media screen and (max-width: 768px){
-  .homeButton{
-    height: 500px;
-  }
-  .not-found-page{
-    width: 430px;
-  }
-  .not-found-page h1{
-    margin: 10px 0 5px 0;
-  }
-  .form-container{
-    height: 500px;
-  }
-  .form-container h1{
-    margin-top: 10px;
-  }
-  .validator-form-container{
-    width: 70%;
-  }
-  .input{
+  .not-found-page {
     width: 100%;
   }
-  footer{
-    height: 150px;
+  .not-found-page h1 {
+    margin: 10px 0 5px 0;
   }
-  .lower-bar{
+  .form-container {
+    height: 500px;
+  }
+  .form-container h1 {
+    margin-top: 10px;
+  }
+  .validator-form-container {
+    width: 70%;
+  }
+  .input {
+    width: 100%;
+  }
+  footer {
+    padding-top: 10px;
+    /* position: relative; */
+    height: 100px;
+  }
+  .lower-bar {
     display: block;
     text-align: center;
-    padding-top: 25px;
+    height: 100%;
   }
-  .lower-bar a{
+  .lower-bar a {
     margin: 0;
+  }
+  .social-icons-container img{
+    margin: 10px 10px 0 10px;
   }
 }
 
-@media screen and (max-width: 400px){
-  .homeButton{
+
+@media screen and (max-width: 400px) {
+  main{
+    min-height: calc(100vh - 200px);
+  }
+  .first-page {
+    height: 650px;
+  }
+
+  .option-container {
+    margin: 0 250px;
+    flex-direction: column;
+  }
+
+  .user-selection-container {
+    width: 400px;
+    margin: 10px;
+  }
+
+  .user-selection-container img {
+    width: 150px;
+    margin-bottom: 20px;
+  }
+
+  .information-box {
+    display: none;
+  }
+
+  .buttonSelect {
+    background-color: var(--button-color);
+    width: 200px;
+    height: 50px;
+    border: 0;
+    font-size: var(--font-size2);
+    font-weight: bold;
+    color: var(--font-color);
+    border-radius: 50px;
+    outline: none;
+  }
+
+  .homeButton {
     height: 425px;
   }
-  .homeButton input{
+  .homeButton input {
     width: 150px;
     height: 40px;
   }
-  .form-container{
+  .form-container {
     height: 450px;
   }
-  .validator-form-container h3{
+  .validator-form-container h3 {
     margin: 15px 0;
   }
-  .input{
+  .input {
     height: 35px;
   }
-  .button{
+  .button {
     height: 30px;
     width: 150px;
     font-size: 20px;
   }
-  footer{
+  footer {
+    padding-top: 10px;
+    position: relative;
     height: 100px;
   }
-  .lower-bar{
-    padding-top: 10px;
+  .lower-bar {
+    padding: 0;
+    height: 100%;
   }
-  .social-icons-container{
-    padding-bottom: 10px;
+  .social-icons-container img{
+    margin: 10px 10px 0 10px;
   }
-}
+}  
