--- a/src/style.css
+++ b/src/style.css
@@ -18,11 +18,11 @@ body {
   background-color: rgb(238, 238, 238);
 }
 
-h1{
-    margin-top: 50px;
-    font-size: var(--font-size3);
-    color: var(--form-color);
-} 
+h1 {
+  margin-top: 50px;
+  font-size: var(--font-size3);
+  color: var(--form-color);
+}
 
 header {
   width: 100%;
@@ -32,7 +32,7 @@ header {
   box-shadow: 0 1px 10px 0 #00000012;
 }
 
-header:hover{
+header:hover {
   cursor: pointer;
 }
 
@@ -42,10 +42,9 @@ header:hover{
 }
 
 main {
-  /* position: fixed;  */
+  min-height: calc(100vh - 200px);
   width: 100%;
 }
-
 
 .first-page {
   height: 650px;
@@ -55,13 +54,14 @@ main {
   justify-content: center;
 }
 
-.option-container{
-    margin: 0 250px;
-    width: 70%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.option-container {
+  margin: 0 250px;
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
+
 .user-selection-container {
   width: 400px;
   display: flex;
@@ -92,80 +92,63 @@ main {
   cursor: pointer;
 }
 
-/* .information-box{
-    margin-top: 50px;
-    width: 970px;
-    height: 60px;
-    background-color: var(--input-color);
-    border-radius: 10px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.information-box h1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 .form-container {
-    height: 650px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-  
-.validator-form-container {
-    color: var(--font-color);
-    font-size: var(--font-size3);
-    width: 500px;
-    padding: 0 50px 20px 50px;
-    background-color: var(--form-color);
-    border-radius: 20px;
+  height: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.inputs-container{
+.validator-form-container {
+  color: var(--font-color);
+  font-size: var(--font-size3);
+  width: 500px;
+  padding: 0 50px 20px 50px;
+  background-color: var(--form-color);
+  border-radius: 20px;
+}
+
+.inputs-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.input{
-    background-color: var(--input-color);
-    border: none;
-    outline: none;
-    height: 50px;
-    width: 450px;
-    margin-bottom: 20px;
-    padding: 0px 20px;
-    border-radius: 50px;
-    font-size: var(--font-size2);
+.input {
+  background-color: var(--input-color);
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 450px;
+  margin-bottom: 20px;
+  padding: 0px 20px;
+  border-radius: 50px;
+  font-size: var(--font-size2);
 }
 
-::placeholder{
-    font-size: 18px;
-    color: var(--font-color);
+::placeholder {
+  font-size: 18px;
+  color: var(--font-color);
 }
 
 .button {
-    background-color: var(--button-color);
-    width: 200px;
-    height: 50px;
-    border: 0;
-    font-size: var(--font-size3);
-    font-weight: bold;
-    color: var(--font-color);
-    border-radius: 50px;
-    outline: none;
+  background-color: var(--button-color);
+  width: 200px;
+  height: 50px;
+  border: 0;
+  font-size: var(--font-size3);
+  font-weight: bold;
+  color: var(--font-color);
+  border-radius: 50px;
+  outline: none;
 }
 
-.button:hover{
-    box-shadow: 0 0 5px 0 rgb(25, 54, 121);
-    background-color: var(--background-color);
-    cursor: pointer;
+.button:hover {
+  box-shadow: 0 0 5px 0 rgb(25, 54, 121);
+  background-color: var(--background-color);
+  cursor: pointer;
 }
-
 
 .homeButton {
   height: 650px;
@@ -182,7 +165,7 @@ main {
   font-size: var(--font-size3);
 }
 
-.not-found-page img{
+.not-found-page img {
   width: 50%;
 }
 
@@ -204,10 +187,14 @@ main {
   width: 60%;
 }
 
+.valid-container h1{
+  text-align: center;
+}
+
 footer {
   width: 100%;
   height: 100px;
-  position: fixed;
+  position: relative;
   bottom: 0;
   box-shadow: 0 -1px 10px 0 #00000012;
 }
@@ -226,7 +213,7 @@ footer {
   padding: 16px 16px;
 }
 
-.lower-bar a:hover{
+.lower-bar a:hover {
   color: var(--button-color);
 }
 
@@ -236,27 +223,85 @@ footer {
   height: 30px;
 }
 
-.social-icons-container img:hover{
+.social-icons-container img:hover {
   cursor: pointer;
 }
 
+@media screen and (max-width: 1200px) { 
+  .option-container {
+    width: 100%;
+    margin-bottom: 60px;
+  }
+  .user-selection-container{
+    width: 50%;
+  }
+  .user-selection-container img {
+    width: 50%;
+  }
 
-@media screen and (max-width: 1200px){
+  .buttonSelect{
+    width: 90%;
+  }
+
+  .information-box {
+    height: 20px;
+  }
+
+  .information-box h1 {
+    padding: 0 20px;
+    text-align: center;
+    font-size: var(--font-size2);
+  }
+
   .homeButton {
     height: 700px;
   }
   .not-found-page {
     width: 100%;
   }
+
+  .valid-container {
+    height: 750px;
+  }
+    footer {
+    margin-top: 20px;
+    padding-top: 10px;
+  }
   .lower-bar a {
     margin: 0 0 0 30px;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .first-page {
+    height: 420px;
+  }
 
-@media screen and (max-width: 768px){
+  .option-container {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .user-selection-container img {
+    width: 40%;
+  }
+
+  .information-box {
+    height: 20px;
+  }
+
+  .buttonSelect {
+    width: 90%;
+    font-size: var(--font-size2);
+  }
+  .homeButton input {
+    width: 50%;
+  }
   .not-found-page {
     width: 100%;
+  }
+  .not-found-page img{
+    width: 50%;
   }
   .not-found-page h1 {
     margin: 10px 0 5px 0;
@@ -270,18 +315,14 @@ footer {
   .validator-form-container {
     width: 70%;
   }
+
   .input {
     width: 100%;
-  }
-  footer {
-    padding-top: 10px;
-    /* position: relative; */
-    height: 100px;
   }
   .lower-bar {
     display: block;
     text-align: center;
-    height: 100%;
+    height: 100%
   }
   .lower-bar a {
     margin: 0;
@@ -291,22 +332,17 @@ footer {
   }
 }
 
-
-@media screen and (max-width: 400px) {
-  main{
-    min-height: calc(100vh - 200px);
-  }
+@media screen and (max-width: 420px) {
   .first-page {
     height: 650px;
   }
 
   .option-container {
-    margin: 0 250px;
     flex-direction: column;
   }
 
   .user-selection-container {
-    width: 400px;
+    width: 100%;
     margin: 10px;
   }
 
@@ -316,26 +352,14 @@ footer {
   }
 
   .information-box {
-    display: none;
+    height: 100%;
   }
 
   .buttonSelect {
-    background-color: var(--button-color);
-    width: 200px;
-    height: 50px;
-    border: 0;
-    font-size: var(--font-size2);
-    font-weight: bold;
-    color: var(--font-color);
-    border-radius: 50px;
-    outline: none;
-  }
-
-  .homeButton {
-    height: 425px;
+    width: 70%;
   }
   .homeButton input {
-    width: 150px;
+    width: 70%;
     height: 40px;
   }
   .form-container {
@@ -352,11 +376,7 @@ footer {
     width: 150px;
     font-size: 20px;
   }
-  footer {
-    padding-top: 10px;
-    position: relative;
-    height: 100px;
-  }
+  
   .lower-bar {
     padding: 0;
     height: 100%;
@@ -364,4 +384,4 @@ footer {
   .social-icons-container img{
     margin: 10px 10px 0 10px;
   }
-}  
+}
